@@ -196,7 +196,8 @@ TclGrammerApp_SRC =  StopRun.cpp StartRun.cpp \
 	UngateCommand.cpp GatePackage.cpp GateFactory.cpp \
 	GateFactoryException.cpp TCLHistogrammer.cpp \
 	PseudoCommand.cpp PseudoScript.cpp ChanCommand.cpp WriteCommand.cpp \
-	ReadCommand.cpp TCLAnalyzer.cpp EventProcessor.cpp TclGrammerApp.cpp \
+	ReadCommand.cpp CRootExec.cpp 	\
+	TCLAnalyzer.cpp EventProcessor.cpp TclGrammerApp.cpp \
 	Globals.cpp FilterCommand.cpp \
 	ScalerProcessor.cpp ScalerProcessorCallbacks.cpp \
 	DocumentationException.cpp DocumentationCallback.cpp \
@@ -235,7 +236,7 @@ SpecTcl_SRC =  MySpecTclApp.cpp \
 	SpectrumCommand.h SpectrumPackage.h StartRun.h StopRun.h \
 	TCLAnalyzer.h TCLHistogrammer.h  TclGrammerApp.h \
 	UnbindCommand.h UngateCommand.h WriteCommand.h \
-	CFoldCommand.h
+	CFoldCommand.h CRootExec.h
 
 Spectra_SRC = SpectraLocalDisplay.cpp SpectraProcess.cpp
 
